# comp

./: .gitignore  1gc014  Makefile  mod.cpp  pyproject.toml  score.py
abc002/: d.cpp
abc006/: d.cpp
abc007/: c.cpp
abc012/: d.cpp
abc014/: c.cpp
abc021/: d.cpp
abc023/: d.cpp
abc026/: c.cpp
abc027/: b.cpp
abc034/: c.cpp
abc045/: b.cpp
abc047/: d.cpp
abc064/: d.cpp
abc065/: d.cpp
abc067/: d.cpp
abc068/: c.cpp
abc070/: d.cpp
abc074/: d.cpp
abc075/: c.cpp
abc077/: c.cpp
abc079/: d.cpp
abc080/: c.cpp
abc084/: d.cpp  d2.cpp
abc088/: d.cpp
abc095/: c.cpp
abc099/: d.cpp
abc100/: d.cpp
abc103/: d.cpp
abc106/: b.cpp  d.cpp
abc119/: c.cpp
abc120/: d.cpp
abc122/: b.cpp
abc124/: d.cpp
abc125/: c.cpp  d.cpp
abc126/: c.cpp  d.cpp  e.cpp  e2.cpp
abc127/: d.cpp
abc128/: c.cpp  d.cpp
abc129/: d.cpp
abc130/: d.cpp
abc131/: d.cpp  e.cpp
abc132/: d.cpp  e.cpp
abc133/: c.cpp  d.cpp  e.cpp
abc134/: d.cpp  e.cpp
abc135/: d.cpp
abc136/: d.cpp
abc137/: d.cpp
abc138/: d.cpp  e.cpp
abc139/: b.cpp  c.cpp  d.cpp
abc140/: b.py  c.py  d.py
abc141/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
abc142/: a.cpp  abc_142_c.cpp  abc_142b.cpp  d.cpp  e.cpp
abc143/: a.cpp  abc143_a.py  abc143_c.py  abc143_d.py
abc144/: abc144_a.py  abc144_b.py  abc144_c.py  abc144_d.py  d.cpp  e.cpp
abc145/: b.py  c.cpp  c.py  d.py  d2.cpp  e.cpp  e.py
abc146/: a.cpp  a.py  b.py  c.py  d.py  e.cpp  f.cpp
abc147/: b.py  c.py  d.cpp  d.py  e.py  f.py
abc148/: c.py  d.py  e.py  f.py
abc149/: b.cpp  b.py  c.py  d.py  e.py  f2.cpp
(+338 files in other folders)
