[tool.poetry]
name = "comp"
version = "0.1.0"
description = ""
authors = ["sp4ghet <8775460+sp4ghet@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
numpy = "^1.18.2"
scipy = "^1.4.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
